# Gravitational-Waves-Glitch-Classification

./: .gitignore  README.md  Test.ipynb  pyproject.toml
data/: README.md
experiments/gravity_spy/: ensemble_max_res.py  parallel.py  train_GravitySpy.py  train_attention.py  train_attention_VGG.py  train_merged.py  train_parallel.py  train_pretrained_resnet18.py  train_pretrained_resnet18_1channel.py  train_pretrained_resnet18_3channel.py  train_pretrained_resnet50.py  train_pretrained_vit_b_16.py  train_res05.py
experiments/synthetic_glitches/: train_RF.py  train_SyntheticGlitches.py
figures/: ex-sinth-glitch.ipynb  get_metric_results.py  get_metric_results_old.py  glitch_transforms.ipynb  plot_aliasing.py  plot_attention_weights.py  plot_glitch_classes.py  plot_glitch_classes_Blips.py  plot_glitch_classes_Chirp.py  plot_glitch_classes_Doves.py  plot_img_augm.py  plot_q-transform.py  plot_results.ipynb  plot_results.py  plot_sampling.py  plot_spectral_leakage.py  plot_spectrogram.py  plot_strain_whitening.py  plot_window_functions.py  print_glitch_class_counts.py  signal_process_plots.ipynb
src/ml/data/: dataset_GS.py  dataset_SG.py  datasets.py  download_GS_data.py  download_SG_data.py  preprocess.py  preprocess_GS.py  preprocess_SG.py
src/ml/losses/: focal_loss.py
src/ml/model/: CNN.py  CNN_attention.py  CNN_attention_VGG.py  CNN_attention_inception.py  CNN_attention_pretrained.py  CNN_merged.py  CNN_parallel.py  ResNet18.py  ResNet50.py  blocks.py  convnext_tiny.py  faster_vit.py  init_weights.py  models.py  vit_b_16.py
src/ml/training/: loops.py  (+2 more)
(+1 files in other folders)
