[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gw-glitch-classification"
version = "0.0.1"
dependencies = [
    "numpy",
    "pandas",
    "h5py",
    "matplotlib",
    "torch == 2.2.0",
    "torchvision == 0.17.0",
    "scikit-learn == 1.5.0",
    "tqdm"
]

[project.optional-dependencies]
GW = [
    "gwpy == 3.0.8"
]